--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ th { background:#f7931e; color:white; }
 input[type=time], input[type=text], input[type=date], select, #filterInput { width:90%; padding:4px; margin:2px 0; }
 .employee-item { display:flex; align-items:center; justify-content:flex-start; padding:2px 4px; margin:2px 0; background:#f7931e; border-radius:4px; color:white; font-size:0.9em; }
 .employee-item button { margin-right:5px; background:red; color:white; border:none; border-radius:3px; cursor:pointer; }
-.collapsible { background:#262e87; color:white; cursor:pointer; padding:8px; width:100%; border:none; text-align:left; outline:none; font-size:0.9em; border-radius:3px; margin-top:5px; touch-action: manipulation; }
+.collapsible { background:#262e87; color:white; cursor:pointer; padding:8px; width:100%; border:none; text-align:left; outline:none; font-size:0.9em; border-radius:3px; margin-top:5px; touch-action: manipulation; z-index:1003; pointer-events:auto; }
 .active, .collapsible:hover { background:#3a2b7c; }
 .content { display:none; overflow:hidden; padding-left:10px; }
 #overtimeSummary { margin-top:10px; font-weight:bold; color:#262e87; }
@@ -119,7 +119,9 @@ function initDateData(){
 function attachCollapsibleListeners(){
   document.querySelectorAll(".collapsible").forEach(btn=>{
     btn.removeEventListener("click", btn._listener);
-    btn._listener = ()=>{
+    btn.removeEventListener("touchstart", btn._listener);
+    btn._listener = (e)=>{
+      e.preventDefault(); // prevent double trigger
       btn.classList.toggle("active");
       const content = btn.nextElementSibling;
       if(content){
@@ -127,6 +129,7 @@ function attachCollapsibleListeners(){
       }
     };
     btn.addEventListener("click", btn._listener);
+    btn.addEventListener("touchstart", btn._listener);
   });
 }
 
@@ -221,53 +224,56 @@ function buildTeamsContent(){
       teamDiv.appendChild(wrap);
     }
 
+    // Employee List
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
       const delBtn=document.createElement("button"); delBtn.textContent="❌";
       delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+(team.name!=="OFF"?` (${emp.site||team.site})`:"")));
-      li.dataset.empId = emp.id;
+      li.dataset.empId=emp.id;
       ul.appendChild(li);
     });
 
+    // Add Employee Dropdown
     const addSelect = document.createElement("select");
     const defaultOption = document.createElement("option"); defaultOption.value=""; defaultOption.textContent="Select Employee"; addSelect.appendChild(defaultOption);
     masterEmployees.forEach(empName=>{ const option=document.createElement("option"); option.value=empName; option.textContent=empName; addSelect.appendChild(option); });
     const addBtn = document.createElement("button"); addBtn.textContent="➕ Add Employee";
     addBtn.onclick=()=>{
-      const selectedEmp=addSelect.value; if(!selectedEmp) return;
+      const selectedEmp = addSelect.value; if(!selectedEmp) return;
       if(team.employees.some(e=>e.name===selectedEmp)) return alert("Employee already in this team");
-      const emp = { id: Date.now(), name: selectedEmp, team: team.name, site:"" };
+      const emp = { id: Date.now(), name:selectedEmp, team:team.name, site:"" };
       team.employees.push(emp);
       localStorage.setItem("allData", JSON.stringify(allData));
-      buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
+      buildTeamsContent();
+      buildEmployeeTable(filterInput.value.trim().toLowerCase());
     };
     teamDiv.appendChild(addSelect); teamDiv.appendChild(addBtn);
 
     new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
-      const empId=evt.item.dataset.empId;
-      const newTeamName=evt.to.dataset.team;
+      const empId = evt.item.dataset.empId;
+      const newTeamName = evt.to.dataset.team;
       moveEmployeeToTeam(empId,newTeamName);
     }});
 
     teamDiv.appendChild(ul);
     menu.appendChild(teamDiv);
   });
-
   attachCollapsibleListeners();
 }
 
 // ==========================
-// Move Employee between teams
+// Move Employee
 function moveEmployeeToTeam(empId,newTeamName){
-  let emp, oldTeam;
   const teams = allData[selectedDate].teams;
+  let emp, oldTeam;
   teams.forEach(team=>team.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=team; } }));
   if(emp && emp.team!==newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
     const newTeam = teams.find(t=>t.name===newTeamName);
-    emp.team=newTeamName; newTeam.employees.push(emp);
+    emp.team = newTeamName;
+    newTeam.employees.push(emp);
     localStorage.setItem("allData", JSON.stringify(allData));
     buildTeamsContent();
     buildEmployeeTable(filterInput.value.trim().toLowerCase());
@@ -275,29 +281,24 @@ function moveEmployeeToTeam(empId,newTeamName){
 }
 
 // ==========================
-// Build Employee Table
+// Build Table
 const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
 function buildEmployeeTable(filterText=""){
-  const table=document.getElementById("employeeTable");
-  table.innerHTML=`<tr>
-    <th>Employee Name</th><th>Date</th><th>Site Name</th>
-    <th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th><th>Delete</th>
-  </tr>`;
+  const table = document.getElementById("employeeTable");
+  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th><th>Delete</th></tr>`;
   const teams = allData[selectedDate].teams;
-  if(!allData[selectedDate].employees) allData[selectedDate].employees={};
-
   teams.forEach(team=>team.employees.forEach(emp=>{
     if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
-    const row=table.insertRow();
-    const empData=allData[selectedDate].employees[emp.id]||{};
-    row.insertCell(0).textContent=emp.name;
-    row.insertCell(1).textContent=selectedDate;
-    const siteInput=document.createElement("input"); siteInput.value=empData.site||emp.site;
+    const row = table.insertRow();
+    const empData = allData[selectedDate].employees[emp.id]||{};
+    row.insertCell(0).textContent = emp.name;
+    row.insertCell(1).textContent = selectedDate;
+    const siteInput = document.createElement("input"); siteInput.value=empData.site||emp.site;
     row.insertCell(2).appendChild(siteInput);
-    const inInput=document.createElement("input"); inInput.type="time"; inInput.value=empData.in||team.siteIn||"";
-    const outInput=document.createElement("input"); outInput.type="time"; outInput.value=empData.out||team.siteOut||"";
+    const inInput = document.createElement("input"); inInput.type="time"; inInput.value=empData.in||team.siteIn||"";
+    const outInput = document.createElement("input"); outInput.type="time"; outInput.value=empData.out||team.siteOut||"";
     row.insertCell(3).appendChild(inInput); row.insertCell(4).appendChild(outInput);
     const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
     const delCell=row.insertCell(7);
@@ -320,19 +321,13 @@ function buildEmployeeTable(filterText=""){
 }
 
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
-  const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ totalCell.textContent="0.00"; overtimeCell.textContent="0.00"; totalCell.style.background="lightcoral"; overtimeCell.style.background="lightcoral"; return [0,0]; }
+  const inTime = inInput.value, outTime = outInput.value;
+  if(!inTime || !outTime){ totalCell.textContent="0.00"; overtimeCell.textContent="0.00"; totalCell.style.background="lightcoral"; overtimeCell.style.background="lightcoral"; return [0,0]; }
   totalCell.style.background=""; overtimeCell.style.background="";
   const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
-  const overtime=(diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
+  const overtime = (diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
   return [diff,overtime];
-}
-
-function calculateHoursValue(inTime,outTime){
-  if(!inTime||!outTime) return 0;
-  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
-  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; return diff;
 }
 
 function updateOvertimeSummary(){
@@ -344,17 +339,16 @@ function updateOvertimeSummary(){
 }
 
 // ==========================
-// Save Data Button
+// Save Data
 document.getElementById("saveBtn").addEventListener("click", ()=>{
   localStorage.setItem("allData", JSON.stringify(allData));
   alert("✅ Data saved for "+selectedDate);
 });
 
 // ==========================
-// View Filter Button
+// View Filter
 document.getElementById("viewFilterBtn").addEventListener("click", ()=>{
-  const filterText=filterInput.value.trim().toLowerCase();
-  buildEmployeeTable(filterText);
+  buildEmployeeTable(filterInput.value.trim().toLowerCase());
 });
 
 // ==========================
@@ -366,8 +360,8 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
     const teams = allData[date].teams;
     teams.forEach(team=>team.employees.forEach(emp=>{
-      const empData=allData[date].employees[emp.id]; if(!empData) return;
-      const total=calculateHoursValue(empData.in,empData.out);
+      const empData = allData[date].employees[emp.id]; if(!empData) return;
+      const total = calculateHoursValue(empData.in,empData.out);
       rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total.toFixed(2),Math.max(0,total-9).toFixed(2)]);
     }));
   });
@@ -375,8 +369,14 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
 });
 
+function calculateHoursValue(inTime,outTime){
+  if(!inTime||!outTime) return 0;
+  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
+  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; return diff;
+}
+
 // ==========================
-// Share Team Count Button
+// Share Team Count
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
   localStorage.setItem("allData", JSON.stringify(allData));
   window.open("team_count.html?date="+selectedDate,"_blank");
@@ -387,6 +387,7 @@ document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
 initDateData();
 buildTeamsContent();
 buildEmployeeTable();
+
 </script>
 
 </body>
